fixed many bugs, including #8 and #9 - better browser support (shiv) - upgrade browser message on outdated browsers - contextual stuff (sentiment not showing immediately) - further cleanup and such - some styling fixes

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,7 @@
 css
 */
 
-@import url(https://fonts.googleapis.com/css?family=Inconsolata:400,700);
-@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
+@import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
 
 @media only screen and (max-device-width: 480px) {
      .col-xs-4, .col-sm-4, .col-md-4 {
@@ -20,7 +19,7 @@ css
         font-size: 3.5vw !important;
      }
      
-     .mobile-hide, .divider-vertical {
+     .mobile-hide {
         display: none !important;
      }
      
@@ -60,39 +59,36 @@ html, body, .row {
 
 .head-input {
     font-size: 12pt;
-    
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
     border-radius: 5px;
 
     padding: 0.5vw;
     
     border: 1px solid rgb(169, 169, 169);
     outline: none;
-    transition: border .5s, box-shadow .5s;
+    -webkit-transition: border .5s, box-shadow .5s;
+            transition: border .5s, box-shadow .5s;
 }
 
 .para, .part {
     border: 1px solid initial;
     outline: none;
-    transition: border .5s, box-shadow .5s;
+    -webkit-transition: border .5s, box-shadow .5s;
+            transition: border .5s, box-shadow .5s;
 
     width: 100%;
-    height: 12vh;
+    height: 15vh;
     
     font-size: 12pt;
 
     resize: none;
-    
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
     border-radius: 5px;
 
     padding: 0.5vw;
 }
 
 .toggle {
-    transition: border .5s, box-shadow .5s;
+    -webkit-transition: border .5s, box-shadow .5s;
+            transition: border .5s, box-shadow .5s;
     border-color: #33C3F0;
     font-size: 16px !important;
 }
@@ -105,8 +101,6 @@ html, body, .row {
 
 .part:focus, .para:focus, .btn-primary:hover, .zeroclipboard-is-hover, .head-input:focus, .toggle:hover {
     border: 1px solid #17dbdb;
-    -webkit-box-shadow: 0.5vw 0.1vh 3vh rgba(0,0,0,0.18);
-    -moz-box-shadow: 0.5vw 0.1vh 3vh rgba(0,0,0,0.18);
     box-shadow: 0.5vw 0.1vh 3vh rgba(0,0,0,0.18);
 }
 
@@ -119,7 +113,8 @@ html, body, .row {
 }
 
 .btn-primary {
-    transition: border .5s, box-shadow .5s, transform .5s;
+    -webkit-transition: border .5s, box-shadow .5s, -webkit-transform .5s;
+	        transition: border .5s, box-shadow .5s, transform .5s;
     height: 38px;
     border-color: #33C3F0;
     text-align: center;
@@ -168,14 +163,16 @@ html, body, .row {
 }
 
 .drop {
-    transform: scale(1.1, 1.1);
-    -webkit-box-shadow: 0.6vw 0.2vh 3vh rgba(0,0,0,0.18);
-    -moz-box-shadow: 0.6vw 0.2vh 3vh rgba(0,0,0,0.18);
+    -webkit-transform: scale(1.1, 1.1);
+        -ms-transform: scale(1.1, 1.1);
+            transform: scale(1.1, 1.1);
     box-shadow: 0.6vw 0.2vh 3vh rgba(0,0,0,0.18);
 }
 
 .pacman-scale {
-    transform: scale(0.4,0.4) translateY(-60%);
+    -webkit-transform: scale(0.4,0.4) translateY(-60%);
+        -ms-transform: scale(0.4,0.4) translateY(-60%);
+            transform: scale(0.4,0.4) translateY(-60%);
 }
 
 #save-text {
